--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.21.0",
+    "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "react-typing-effect": "^2.0.5",
