--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
+    "react-spinning-wheel": "^2.1.0",
     "react-typing-effect": "^2.0.5",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
